BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/Purchase_Order_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Contains Products added to a Purchase Order</description>
    <label>Purchase Order Line Item</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>PO Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>