BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Bradken_Description__c.field-meta.xml
<CustomField>
    <fullName>Bradken_Description__c</fullName>
    <label>Bradken Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>