BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Bradken_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Bradken_Part_Number__c</fullName>
    <label>Bradken Part Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>