BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Customer_Part_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_Description__c</fullName>
    <label>Customer Part Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>