BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/CustomerPurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>CustomerPurchaseOrder__c</fullName>
    <description>The Purchase Order this product is associated to</description>
    <label>Customer Purchase Order</label>
    <referenceTo>Customer_Purchase_Order__c</referenceTo>
    <relationshipLabel>Purchase Order Line Items</relationshipLabel>
    <relationshipName>Purchase_Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>