BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/DespatchWarehouse__c.field-meta.xml
<CustomField>
    <fullName>DespatchWarehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Despatch Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Purchase Order Line Items</relationshipLabel>
    <relationshipName>Purchase_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>