BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Drawing_Number__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Number__c</fullName>
    <label>Drawing Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>