BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Freight_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Freight_Cost_Price__c</fullName>
    <label>Unit Freight Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>