BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <label>Lead Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>