BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/LineItemCostPrice__c.field-meta.xml
<CustomField>
    <fullName>LineItemCostPrice__c</fullName>
    <formula>Quantity__c * TotalUnitCostPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>