BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/LineItemSellPrice__c.field-meta.xml
<CustomField>
    <fullName>LineItemSellPrice__c</fullName>
    <formula>Quantity__c * TotalUnitSellPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Sell Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>