BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Liner_Thickness__c.field-meta.xml
<CustomField>
    <fullName>Liner_Thickness__c</fullName>
    <label>Liner Thickness</label>
    <length>30</length>
    <type>Text</type>
</CustomField>