BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Material_Grade__c.field-meta.xml
<CustomField>
    <fullName>Material_Grade__c</fullName>
    <label>Material Grade</label>
    <length>30</length>
    <type>Text</type>
</CustomField>