BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/OpportunityLineItem__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItem__c</fullName>
    <label>OpportunityLineItem</label>
    <length>18</length>
    <type>Text</type>
</CustomField>