BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Pattern_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Cost_Price__c</fullName>
    <label>Pattern Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>