BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/TotalUnitCostPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalUnitCostPrice__c</fullName>
    <label>Total Unit Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>