BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/TotalUnitSellPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalUnitSellPrice__c</fullName>
    <label>Total Unit Sell Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>