BradkenProduction/force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <label>UoM</label>
    <length>30</length>
    <type>Text</type>
</CustomField>